refactor(tmpl): simplify logic & package lists
Refactors the main configuration template to improve readability and
updates the default package sets.

- Simplify email and ephemeral detection logic using ternary operators.
- Treat Windows environments as ephemeral by default.
- Add `curl`, `fd-find`, and `subversion` to the Linux package list.
- Rename `os_id` to `osid` and add an `is_windows` boolean to the
  template data.

--- a/src/.chezmoi.toml.tmpl
+++ b/src/.chezmoi.toml.tmpl
@@ -1,37 +1,25 @@
-{{- $email := "joelabreurojas@gmail.com" -}}
-{{- if eq .chezmoi.os "windows" -}}
-{{-     $email = "jabreu@transmandu.com" -}}
-{{- end -}}
-
-{{- $os_id := .chezmoi.os -}}
+{{- $osID := .chezmoi.os -}}
 {{- if (and (eq .chezmoi.os "linux") (hasKey .chezmoi.osRelease "id")) -}}
-{{-     $os_id = printf "%s-%s" .chezmoi.os .chezmoi.osRelease.id -}}
+{{-     $osID = printf "%s-%s" .chezmoi.os .chezmoi.osRelease.id -}}
 {{- end -}}
 
-{{- $ephemeral := false -}}
-{{- if or (env "CODESPACES") (env "REMOTE_CONTAINERS") (env "SSH_CONNECTION") (env "KUBERNETES_SERVICE_HOST") (env "container") (stat "/.dockerenv") -}}
-{{-     $ephemeral = true -}}
-{{- end -}}
+{{- $isWindows := eq .chezmoi.os "windows" -}}
+{{- $ephemeral := or (env "CODESPACES") (env "REMOTE_CONTAINERS") (env "GITPOD_WORKSPACE_ID") $isWindows -}}
 
 [data]
     name = "Joel Abreu Rojas"
-    email = {{ $email | quote }}
-    os_id = {{ $os_id | quote }}
+    email = {{ $isWindows | ternary "joelabreurojas@transmandu.com" "joelabreurojas@gmail.com" | quote }}
+    osid = {{ $osID | quote }}
+    is_windows = {{ $isWindows }}
     ephemeral = {{ $ephemeral }}
 
-    [data.packages]
-        linux = [
-            "git", "build-essential", "unzip", "jq", "zsh", "ripgrep"
-        ]
-        windows = [
-            "Git.Git", "Microsoft.PowerShell", "BurntSushi.ripgrep", "sharkdp.fd"
-        ]
+[data.packages]
+    linux = ["curl", "git", "build-essential", "unzip", "jq", "zsh", "ripgrep", "fd-find", "subversion"]
+    windows = ["Git.Git", "Microsoft.PowerShell", "BurntSushi.ripgrep", "sharkdp.fd"]
 
 [bitwarden]
     command = "bw"
-    {{- if not $ephemeral }}
-    unlock = "auto"
-    {{- end }}
+    {{ if not $ephemeral }}unlock = "auto"{{ end }}
 
 [edit]
     apply = true
@@ -42,8 +30,8 @@
     autoPush = true
 {{- end }}
 
-{{- if eq .chezmoi.os "windows" -}}
+{{- if $isWindows }}
 [interpreters.ps1]
     command = "pwsh"
     args = ["-NoLogo"]
-{{- end -}}
+{{- end }}
