feat(git/ssh): multi-account support
Introduce a more robust configuration to manage separate
personal and work development identities. This allows for
seamless switching of git credentials and ssh keys based
on the context.

- Create distinct git and ssh configurations for work.
- Abstract ssh key names into a list in chezmoi data.
- Fetch ssh keys dynamically from bitwarden by name.
- Use git-config's `includeIf` for conditional loading.

--- a/src/.chezmoi.toml.tmpl
+++ b/src/.chezmoi.toml.tmpl
@@ -9,10 +9,12 @@
 
 [data]
     name = "Joel Abreu Rojas"
-    email = {{ $isWork | ternary "joelabreurojas@transmandu.com" "joelabreurojas@gmail.com" | quote }}
+    username = {{ $isWork | ternary "JAR-Transmandu" "joelabreurojas" | quote }}
+    email = {{ $isWork | ternary "jabreu@transmandu.com" "joelabreurojas@gmail.com" | quote }}
     os_id = {{ $osID | quote }}
     is_work = {{ $isWork }}
     is_remote = {{ $isRemote }}
+    ssh_keys = ["id_ed25519", "id_ed25519_work"]
 
 [data.packages]
     linux = ["curl", "git", "build-essential", "unzip", "jq", "zsh", "ripgrep", "fd-find", "subversion"]
