--- a/src/dot_ssh/private_id_ed25519.tmpl
+++ b/src/dot_ssh/private_id_ed25519.tmpl
@@ -1,3 +1,3 @@
 {{- if not .is_remote -}}
-{{ (bitwarden "item" "ssh-id_ed25519").notes }}
+{{ (bitwarden "item" (index .ssh_keys 0)).notes }}
 {{- end -}}
