--- a/src/dot_config/git/config.tmpl
+++ b/src/dot_config/git/config.tmpl
@@ -62,7 +62,7 @@
 
 {{ if .is_work -}}
 [includeIf "gitdir:**/work/**"]
-    path = ~/.gitconfig_work
+    path = ~/.config/git/config_work
 {{- end }}
 
 {{ if not .is_remote -}}
