--- a/src/.chezmoiscripts/run_onchange_before/run_onchange_before_00-install-packages-windows.ps1.tmpl
+++ b/src/.chezmoiscripts/run_onchange_before/run_onchange_before_00-install-packages-windows.ps1.tmpl
@@ -1,4 +1,4 @@
-{{ template "pwsh_helpers" . }}
+{{ template "pwsh_loggers" . }}
 # packages hash: {{ .packages.windows | toJson | sha256sum }}
 
 $packages = @(
