--- a/src/.chezmoi.toml.tmpl
+++ b/src/.chezmoi.toml.tmpl
@@ -7,6 +7,10 @@
 
 {{- $isRemote := or (env "CODESPACES") (env "REMOTE_CONTAINERS") (env "SSH_CONNECTION") (env "KUBERNETES_SERVICE_HOST") (env "container") (stat "/.dockerenv") -}}
 
+{{- $isWSL := (and (eq .chezmoi.os "linux") (.chezmoi.kernel.osrelease | lower | contains "microsoft")) -}}
+
+{{- $isHeadless := or $isRemote $isWSL -}}
+
 [data]
     name = "Joel Abreu Rojas"
     username = {{ $isWork | ternary "JAR-Transmandu" "joelabreurojas" | quote }}
@@ -14,6 +18,7 @@
     os_id = {{ $osID | quote }}
     is_work = {{ $isWork }}
     is_remote = {{ $isRemote }}
+    is_headless = {{ $isHeadless }}
     ssh_keys = ["id_ed25519", "id_ed25519_work"]
 
 [data.packages]
