--- a/src/Documents/PowerShell/Microsoft.PowerShell_profile.ps1.tmpl
+++ b/src/Documents/PowerShell/Microsoft.PowerShell_profile.ps1.tmpl
@@ -1,5 +1,11 @@
+$env:MISE_CONFIG_DIR = "$HOME/.config/mise"
 if (Get-Command mise -ErrorAction SilentlyContinue) {
     mise activate pwsh | Invoke-Expression
 }
 
 $env:SSH_AUTH_SOCK = "\\.\pipe\openssh-ssh-agent"
+
+$localBin = "$HOME\.cargo\bin"
+if (-not ($env:PATH -split ';' -contains $localBin)) {
+    $env:PATH = "$localBin;$env:PATH"
+}
