--- a/src/.chezmoiscripts/windows/run_onchange_after_00-setup-neovim.ps1.tmpl
+++ b/src/.chezmoiscripts/windows/run_onchange_after_00-setup-neovim.ps1.tmpl
@@ -1,4 +1,4 @@
-# Config hash: {{ include "dot_config/mise/config.toml.tmpl" | sha256sum }}
+# Config hash: {{ include "dot_config/mise/mise.toml" | sha256sum }}
 # Lockfile hash: {{ include "dot_config/mise/mise.lock" | sha256sum }}
 
 {{ template "pwsh_loggers" . }}
