--- a/src/.chezmoiscripts/linux/run_onchange_after_00-setup-neovim.sh.tmpl
+++ b/src/.chezmoiscripts/linux/run_onchange_after_00-setup-neovim.sh.tmpl
@@ -1,5 +1,5 @@
 #!/bin/bash
-# Config hash: {{ include "dot_config/mise/config.toml.tmpl" | sha256sum }}
+# Config hash: {{ include "dot_config/mise/mise.toml" | sha256sum }}
 # Lockfile hash: {{ include "dot_config/mise/mise.lock" | sha256sum }}
 
 {{ template "bash_loggers" . }}
