--- a/src/.chezmoiscripts/linux/run_onchange_after_01-setup-neovim.sh.tmpl
+++ b/src/.chezmoiscripts/linux/run_onchange_after_01-setup-neovim.sh.tmpl
@@ -1,6 +1,8 @@
 #!/bin/bash
 # Config hash: {{ include "dot_config/mise/mise.toml" | sha256sum }}
+{{- if stat (joinPath .chezmoi.sourceDir "dot_config/mise/mise.lock") }}
 # Lockfile hash: {{ include "dot_config/mise/mise.lock" | sha256sum }}
+{{- end }}
 
 {{ template "bash_loggers" . }}
 set -euo pipefail
