--- a/home/.chezmoiscripts/linux/run_once_before_00-setup-bitwarden.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_once_before_00-setup-bitwarden.sh.tmpl
@@ -17,14 +17,20 @@ fi
 if [[ "$STATUS" == "unauthenticated" || "$STATUS" == "locked" ]]; then
     log_info "Bitwarden is $STATUS."
 
-    {{- if .is_headless -}}
+    {{- if .is_headless }}
     log_error "Cannot interactively resolve in headless environment."
     exit 1
     {{- end }}
 
-    [[ "$STATUS" == "unauthenticated" ]] && bw login
-    [[ "$STATUS" == "locked" ]] && export BW_SESSION=$(bw unlock --raw)
+    if [[ "$STATUS" == "unauthenticated" ]]; then
+        bw login
+        STATUS=$(bw status | jq -r .status)
+    fi
 
+    if [[ "$STATUS" == "locked" ]]; then
+        BW_SESSION=$(bw unlock --raw)
+        export BW_SESSION
+    fi
 fi
 
 log_success "Bitwarden is ready."
