--- a/home/Documents/PowerShell/Microsoft.PowerShell_profile.ps1.tmpl
+++ b/home/Documents/PowerShell/Microsoft.PowerShell_profile.ps1.tmpl
@@ -1,11 +1,17 @@
-$env:MISE_CONFIG_DIR = "$HOME/.config/mise"
+$env:MISE_CONFIG_DIR = "$HOME\.config\mise"
 if (Get-Command mise -ErrorAction SilentlyContinue) {
-    mise activate pwsh | Invoke-Expression
+    mise activate -q pwsh | Invoke-Expression
 }
 
 $env:SSH_AUTH_SOCK = "\\.\pipe\openssh-ssh-agent"
 
-$localBin = "$HOME\.cargo\bin"
-if (-not ($env:PATH -split ';' -contains $localBin)) {
-    $env:PATH = "$localBin;$env:PATH"
+$extraPaths = @(
+    "$HOME\.local\bin",
+    "$HOME\.cargo\bin"
+)
+
+foreach ($path in $extraPaths) {
+    if ((Test-Path $path) -and ($env:PATH -split ';' -notcontains $path)) {
+        $env:PATH = "$path;$env:PATH"
+    }
 }
