--- a/home/.chezmoiexternals/fonts.toml.tmpl
+++ b/home/.chezmoiexternals/fonts.toml.tmpl
@@ -1,11 +1,11 @@
-{{- if ne .profile "minimal" -}}
-{{- $fontDir := (eq .chezmoi.os "windows") | ternary "AppData/Local/Microsoft/Windows/Fonts" ".local/share/fonts" -}}
+{{- if ne .environment "minimal" -}}
+{{-   $fontDir := (eq .chezmoi.os "windows") | ternary "AppData/Local/Microsoft/Windows/Fonts" ".local/share/fonts" -}}
 
 ["{{ $fontDir }}/FiraCode"]
     type = "archive"
     url = "https://github.com/ryanoasis/nerd-fonts/releases/latest/download/FiraCode.zip"
     exact = true
+    stripComponents = 0
     refreshPeriod = "168h"
-    # Only extract the essentials to save space
     include = ["*Regular.ttf", "*Bold.ttf", "*Retina.ttf"]
 {{- end }}
