--- a/home/dot_ssh/private_id_ed25519.tmpl
+++ b/home/dot_ssh/private_id_ed25519.tmpl
@@ -1,3 +1,3 @@
-{{- if ne .profile "minimal" -}}
+{{- if ne .environment "minimal" -}}
 {{ (bitwarden "item" (index .ssh_keys 0)).notes }}
 {{- end -}}
