--- a/home/.chezmoi.toml.tmpl
+++ b/home/.chezmoi.toml.tmpl
@@ -35,14 +35,8 @@
     ssh_keys = {{ $ssh_keys | toJson }}
 
 [data.packages]
-    linux = [
-        "build-essential", "cmake", "unzip", "curl", "git", "ripgrep", "fd-find", 
-        "zoxide", "lazygit", "python3-pip", "python3-venv", "libstdc++6"
-    ]
-    windows = [
-        "Git.Git", "Microsoft.PowerShell", "BurntSushi.ripgrep", "sharkdp.fd",
-        "JesseDuffield.lazygit", "LLVM.LLVM", "GnuWin32.Make", "cmake.install"
-    ]
+    linux = ["build-essential", "unzip", "git"]
+    windows = ["Git.Git"]
 
 [bitwarden]
     command = "bw"
